--- a/frontend_admin/src/index.css
+++ b/frontend_admin/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+div {
+  font-family: 'Noto Sans KR' !important;
+}
